--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
           command: |
             gem update bundler
             bundle install --jobs=4 --retry=3 --path vendor/bundle
-            sudo yarn install
+            yarn install
 
       - save_cache:
           paths:
